--- a/kameleoon-backoffice/src/index.scss
+++ b/kameleoon-backoffice/src/index.scss
@@ -1,12 +1,29 @@
 // вынести общие стили и подчистить
+// мб класс для шрифтов создать
+// сделать паттерн повторения для цветов индикатора
+// курсор поинтер когда вкладка активна
 
-@mixin text_grey {
-  color: #D1D1D1;
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+:root {
+  --font-regular: 400;
+  --font-medium: 500;
+  --font-bold: 700;
+  --white: #FFF;
+  --pink: #E14165;
+  --green: #2EE5AC;
+  --orange: #FF8346;
+  --red: #FE4848;
+  --violet: #8686FF;
+  --light-violet: #C2C2FF;
+  --light-grey-400: #D1D1D1;
+  --light-grey-500: #999;
+  --grey-400: #5C5C5C;
+  --grey-500: #474747;
+  --grey-700: #222222;
+}
+
+@mixin text_grey-light {
+  font: var(--font-regular) 14px "Roboto", sans-serif;
+  color: var(--light-grey-400);
 }
 
 * {
@@ -14,6 +31,8 @@
   outline: none;
   margin: 0;
   padding: 0;
+  font-style: normal;
+  line-height: normal;
 }
 
 .dashboard {
@@ -21,13 +40,12 @@
   &__header {
     margin-bottom: 40px;
     h1 {
-      font-family: "Montserrat", sans-serif;
-      color: #222222;
-      font-size: 26px;
-      font-weight: 700;
+      font: var(--font-bold) 26px "Montserrat", sans-serif;
+      color: var(--grey-700);
       line-height: 32px;
       letter-spacing: 0em;
       text-align: left;
+      cursor: default;
     }
   }
   &__container {
@@ -39,12 +57,11 @@
             position: relative;
             display: flex;
             align-items: center;
-            font-weight: 400;
-            font-family: "Roboto",sans-serif;
+            font: var(--font-regular) "Roboto",sans-serif;
             height: 45px;
             border-radius: 15px;
             border: 1px solid #EBEBEB;
-            background: #FFF;
+            background-color: var(--white);
             padding: 0 15px;
             svg {
               margin-right: 16px;
@@ -55,18 +72,15 @@
               height: 100%;
               margin: 0;
               border: 0;
-              color: inherit;
-              font-size: inherit;
-              font-weight: inherit;
-              font-family: inherit;
               border-radius: inherit;
               background-color: transparent;
               outline: none;
               box-sizing: border-box;
               border: 0;
+              cursor: text;
             }
             &-info {
-              @include text_grey();
+              @include text_grey-light();
               text-align: right;
               background: none;
               border: none;
@@ -74,7 +88,10 @@
               min-width: fit-content;
             }
             ::placeholder {
-              @include text_grey();
+              @include text_grey-light();
+            }
+            &:hover {
+              border-color: var(--grey-400);
             }
           }
         }
@@ -82,33 +99,99 @@
       &__info {
         padding-left: 15px;
         .textfield {
+          position: relative;
           display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-direction: row;
+          width: 100%;
+          border-radius: 5px 3px 3px 5px;
+          background-color: transparent;
+          max-width: 1500px;
+          margin-bottom: 10px;
           &__item {
-            font-family: "Roboto", sans-serif;
-            color: #999;
-            font-size: 11px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: normal;
+            font: var(--font-medium) 11px "Roboto", sans-serif;
+            color: var(--light-grey-500);
             text-transform: uppercase;
+            cursor: default;
           }
         }
       }
     }
     .table {
       &__wrapper {
-        .table__cart {
-          border-radius: 3px;
-          background: #FFF;
+        .table__item {
+          position: relative;
+          display: flex;
+          align-items: center;
+          width: 100%;
+          height: 70px;
           font-family: "Roboto", sans-serif;
+          border-radius: 3px;
+          background-color: var(--white);
+          margin-bottom: 5px;
           &__info {
-
+            &[about="indicator"] {
+              position: absolute;
+              width: 4px;
+              height: 100%;
+              border-radius: 3px 0px 0px 3px;
+              background-color: var(--pink);
+            }
+            &[about="name"] {
+              color: var(--grey-500);
+              font-size: 13px;
+              font-weight: var(--font-medium);
+              margin-left: 15px;
+            }
+            &[about="type"] {
+              color: var(--grey-400);
+              font-size: 12px;
+              font-weight: var(--font-regular);
+            }
+            &[about="status"] {
+              color: var(--grey-400); // цвет по умолчанию, для драфта
+              font-size: 12px;
+              font-weight: var(--font-medium);
+            }
+            &[about="site"] {
+              color: var(--grey-400);
+              font-size: 12px;
+              font-weight: var(--font-regular);
+            }
+            &[about="button"] {
+              margin-left: auto;
+              margin-right: 15px;
+              button {
+                width: 95px;
+                height: 30px;
+                border: none;
+                border-radius: 10px;
+                background-color: var(--green);
+                cursor: pointer;
+                span {
+                  font: 600 12px "Montserrat", sans-serif;
+                  color: var(--white);
+                  text-align: center;
+                }
+              }
+            }
+          }
+          &:hover {
+            cursor: pointer;
+            box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
           }
         }
       }
     }
+  }
+  [about="name"] {
+    width: 389px;
+  }
+  [about="type"] {
+    width: 100px;
+  }
+  [about="status"] {
+    width: 62px;
+  }
+  [about="site"] {
+    width: 117px;
   }
 }
