--- a/kameleoon-backoffice/src/index.scss
+++ b/kameleoon-backoffice/src/index.scss
@@ -1,5 +1,3 @@
-// динамические маргны должны быть, настроить ресайз
-// стили для зелёной кнопки вынести 
 :root {
   --font-regular: 400;
   --font-medium: 500;
@@ -107,7 +105,6 @@
 
       &__info {
         padding-left: 15px;
-
         .textfield {
           position: relative;
           display: flex;
@@ -116,56 +113,61 @@
           background-color: transparent;
           max-width: 1500px;
           margin-bottom: 10px;
-
           &__item {
-            position: relative;
             display: flex;
             flex-direction: row;
-            cursor: pointer;
-            p {
-              font: var(--font-medium) 11px "Roboto", sans-serif;
-              color: var(--light-grey-500);
-              text-transform: uppercase;
+            margin-right: 25px;
+            &[about="status"] {
+              margin-right: 54px;
             }
-            .textfield__arrow {
-              display: flex;
-              flex-direction: column;
-              margin-left: 8px;
-              position: absolute;
-              right: 0;
-              top: -1px;
-              opacity: 1;
-              button {
-                cursor: pointer;
-                position: relative;
-                background-color: unset;
+            &_container {
+              position: relative;
+              cursor: pointer;
+              padding-right: 16px;
+              p {
+                font: var(--font-medium) 11px "Roboto", sans-serif;
+                color: var(--light-grey-500);
+                text-transform: uppercase;
               }
-              &_up, 
-              &_down {
-                width: 7px;
-                height: 7px;
-                border: 1px solid var(--light-grey-500);
-                border-left: 0;
-                border-top: 0;
-                &:hover {
-                  border-color: var(--dark-grey);
-                }
-              }
-              &_up {
-                transform: rotate(225deg);
-              }
-              &_down {
-                transform: rotate(45deg);
-              }
-
-            }
-            &:hover {
               .textfield__arrow {
-                opacity: 1;
+                display: flex;
+                flex-direction: column;
+                margin-left: 8px;
+                position: absolute;
+                right: 0;
+                top: -1px;
+                opacity: 0;
+                button {
+                  cursor: pointer;
+                  position: relative;
+                  background-color: unset;
+                }
+                &_up, 
+                &_down {
+                  width: 7px;
+                  height: 7px;
+                  border: 1px solid var(--light-grey-500);
+                  border-left: 0;
+                  border-top: 0;
+                  &:hover {
+                    border-color: var(--dark-grey);
+                  }
+                }
+                &_up {
+                  transform: rotate(225deg);
+                }
+                &_down {
+                  transform: rotate(45deg);
+                }
+  
+              }
+              &:hover {
+                .textfield__arrow {
+                  opacity: 1;
+                }
               }
             }
           }
-
         }
       }
     }
@@ -184,6 +186,7 @@
           margin-bottom: 5px;
 
           &__info {
+            margin-right: 25px;
             &[about="indicator"] {
               position: absolute;
               width: 4px;
@@ -217,6 +220,7 @@
             &[about="status"] {
               font-size: 12px;
               font-weight: var(--font-medium);
+              margin-right: 54px;
               &.grey {
                 color: var(--grey-400);
               }
