--- a/kameleoon-backoffice/src/components/index.scss
+++ b/kameleoon-backoffice/src/components/index.scss
@@ -1,8 +1,4 @@
-// мб для флексов вынести отдельно
-// мб текст тоже вынести
-// для всех span  тп свой класс добавить
-
-@import './constants.scss';
+@import './common.scss';
 @import './dashboard.scss';
 @import './navigation.scss';
 @import './navigationItem.scss';
