--- a/kameleoon-backoffice/src/components/noResultScreen.scss
+++ b/kameleoon-backoffice/src/components/noResultScreen.scss
@@ -5,22 +5,21 @@
   flex-direction: column;
   margin-top: 130px;
   font: var(--font-medium) 18px "Montserrat", sans-serif;
-}
 
-.no-result_text {
-  color: var(--dark-grey);
-  margin-bottom: 37px;
-}
+  &__text {
+    color: var(--dark-grey);
+    margin-bottom: 37px;
+  }
 
-.no-result_button {
-  width: 95px;
-  height: 30px;
-  border-radius: 10px;
-  border: 1px solid var(--green);
-  background: var(--green);
-  font-size: 12px;
-  font-weight: var(--font-medium-bold);
-  color: var(--white);
-  background-color: var(--green);
-  cursor: pointer;
+  &__button {
+    width: 95px;
+    height: 30px;
+    border-radius: 10px;
+    border: 1px solid var(--green);
+    background: var(--green);
+    font-size: 12px;
+    font-weight: var(--font-medium-bold);
+    color: var(--white);
+    cursor: pointer;
+  }
 }
