--- a/kameleoon-backoffice/src/components/tableItem.scss
+++ b/kameleoon-backoffice/src/components/tableItem.scss
@@ -8,76 +8,77 @@
   border-radius: 3px;
   background-color: var(--white);
   margin-bottom: 5px;
-}
+  transition: box-shadow 0.3s ease-in-out;
 
-.table__item:hover {
-  cursor: pointer;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
-}
-
-.table__item__info {
-  margin-right: 25px;
-}
-
-.table__item__info[data-name="indicator"] {
-  position: absolute;
-  width: 4px;
-  height: 100%;
-  border-radius: 3px 0px 0px 3px;
-}
-
-.table__item__info[data-name="name"] {
-  color: var(--grey-500);
-  font-size: 13px;
-  font-weight: var(--font-medium);
-  margin-left: 15px;
-}
-
-.table__item__info[data-name="type"],
-.table__item__info[data-name="site"] {
-  color: var(--grey-400);
-  font-size: 12px;
-  font-weight: var(--font-regular);
-}
-
-.table__item__info[data-name="status"] {
-  font-size: 12px;
-  font-weight: var(--font-medium);
-  margin-right: 54px;
-}
-
-.table__item__info[data-name="button"] {
-  margin-left: auto;
-  margin-right: 15px;
-
-  button {
-    width: 95px;
-    height: 30px;
-    border: none;
-    border-radius: 10px;
+  &:hover {
     cursor: pointer;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+  }
 
-    span {
-      font: 600 12px "Montserrat", sans-serif;
-      text-align: center;
+  .table__item__info {
+    margin-right: 25px;
+
+    &.indicator {
+      position: absolute;
+      width: 4px;
+      height: 100%;
+      border-radius: 3px 0px 0px 3px;
+    }
+
+    &.name {
+      color: var(--grey-500);
+      font-size: 13px;
+      font-weight: var(--font-medium);
+      margin-left: 15px;
+    }
+
+    &.type,
+    &.site {
+      color: var(--grey-400);
+      font-size: 12px;
+      font-weight: var(--font-regular);
+    }
+
+    &.status {
+      font-size: 12px;
+      font-weight: var(--font-medium);
+      margin-right: 54px;
+    }
+
+    &.cta {
+      margin-left: auto;
+      margin-right: 15px;
+
+      button {
+        width: 95px;
+        height: 30px;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+
+        span {
+          font: 600 12px "Montserrat", sans-serif;
+          text-align: center;
+        }
+      }
     }
   }
-}
 
-.active {
-  button {
-    background-color: var(--grey);
+  &.active {
+    .cta button {
+      background-color: var(--grey);
+    }
+    .cta span {
+      color: var(--white);
+    }
   }
-  span {
-    color: var(--white);
-  }
-}
 
-.disabled {
-  button {
-    background-color: var(--green);
-  }
-  span {
-    color: var(--white);
+  &.disabled {
+    .cta button {
+      background-color: var(--green);
+    }
+    .cta span {
+      color: var(--white);
+    }
   }
 }
