--- a/kameleoon-backoffice/src/components/table/tableItem.scss
+++ b/kameleoon-backoffice/src/components/table/tableItem.scss
@@ -1,4 +1,4 @@
-.table__item {
+.cell {
   position: relative;
   display: flex;
   align-items: center;
@@ -15,7 +15,7 @@
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
   }
 
-  .table__item__info {
+  .cell__info {
     margin-right: 25px;
 
     &.indicator {
