--- a/kameleoon-backoffice/src/components/navigation/navigation.scss
+++ b/kameleoon-backoffice/src/components/navigation/navigation.scss
@@ -1,5 +1,3 @@
-@import './mixins.scss';
-
 .navigation__search {
   margin-bottom: 30px;
 }
@@ -38,13 +36,15 @@
   cursor: text;
 
   &::placeholder {
-    @include text-grey-light();
+    font: var(--font-regular) 14px "Roboto", sans-serif;
+    color: var(--light-grey-400);
   }
 }
 
 .searchbar__field-info {
   display: inline-block;
-  @include text-grey-light();
+  font: var(--font-regular) 14px "Roboto", sans-serif;
+  color: var(--light-grey-400);
   text-align: right;
   background: none;
   border: none;
