--- a/kameleoon-backoffice/src/components/index.scss
+++ b/kameleoon-backoffice/src/components/index.scss
@@ -2,5 +2,5 @@
 @import './dashboard.scss';
 @import './navigation/navigation.scss';
 @import './navigation/navigationItem.scss';
-@import './table/noResultScreen.scss';
+@import './navigation/noResultScreen.scss';
 @import './table/tableItem.scss';
