--- a/kameleoon-backoffice/src/components/navigation/noResultScreen.scss
+++ b/kameleoon-backoffice/src/components/navigation/noResultScreen.scss
@@ -7,12 +7,12 @@
   font: var(--font-medium) 18px "Montserrat", sans-serif;
 }
 
-.no-result__text {
+.no-result_text {
   color: var(--dark-grey);
   margin-bottom: 37px;
 }
 
-.no-result__button {
+.no-result_button {
   width: 95px;
   height: 30px;
   border-radius: 10px;
