--- a/kameleoon-backoffice/src/components/index.scss
+++ b/kameleoon-backoffice/src/components/index.scss
@@ -1,6 +1,6 @@
 @import './helpers/common.scss';
-@import './dashboard.scss';
-@import './navigation/navigation.scss';
-@import './navigation/navigationItem.scss';
-@import './navigation/noResultScreen.scss';
-@import './table/tableItem.scss';
+@import './Dashboard.scss';
+@import './Navigation/Navigation.scss';
+@import './Navigation/NavigationItem.scss';
+@import './Navigation/NoResultScreen.scss';
+@import './Table/TableItem.scss';
